--- a/index.html
+++ b/index.html
@@ -110,5 +110,10 @@
   <p><i>9.&nbsp;&nbsp;</i> <i>Видеоматериалы о г. Риме.</i></p>
   <p><a href="https://www.youtube.com/watch?v=OOYaU0NUrg0">https://www.youtube.com/watch?v=OOYaU0NUrg0</a></p>
   <p><a href="https://www.youtube.com/watch?v=a8egH7bHty8">https://www.youtube.com/watch?v=a8egH7bHty8</a></p>
+  А еще у меня есть 2 сайта:
+<ul>
+    <li><a href="https://xeniakurikalova.github.io/sites/">Моя личная страница.</a></li>
+    <li><a href="https://xeniakurikalova.github.io/obzor_resursov/">Обзор ресурсов по Лингвистике</a></li>
+</ul>
 </body>
 </html>
