--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>New Page</title>
+  <title>Путеводитель по Риму.</title>
 </head>
 <body>
   <p><strong>Путеводитель для города Рим</strong></p>
@@ -109,7 +109,7 @@
   </table>
   <p><i>9.&nbsp;&nbsp;</i> <i>Видеоматериалы о г. Риме.</i></p>
   <p><a href="https://www.youtube.com/watch?v=OOYaU0NUrg0">https://www.youtube.com/watch?v=OOYaU0NUrg0</a></p>
-  <p><a href="https://www.youtube.com/watch?v=a8egH7bHty8">https://www.youtube.com/watch?v=a8egH7bHty8</a></p>
+  <p><a href="https://www.youtube.com/watch?v=a8egH7bHty8">https://www.youtube.com/watch?v=a8egH7bHty8</a></p><br><hr>
   А еще у меня есть 2 сайта:
 <ul>
     <li><a href="https://xeniakurikalova.github.io/sites/">Моя личная страница.</a></li>
